--- a/nodjango/path.html
+++ b/nodjango/path.html
@@ -122,7 +122,7 @@
                 $("#resulttitle").html(fname+"到"+tname+"的路径查询")
                 $.get("http://127.0.0.1:8000/find_path",{'fname':fname,'tname':tname}, function(ret){
                     console.log(ret);
-                    str = "<h3><span id='resulttitle'></span></h3><table class='table table-striped' style='width:100%' id='mytable'><thead><th>路径</th></thead><tbody>";
+                    str = "<h3><span id='resulttitle'></span></h3><table class='table table-striped' style='width:100%' id='mytable'><thead><th>路径</th><th>pid</th></thead><tbody>";
                     t_nodes = ret[0];
                     t_rels = ret[1];
                     t_paths = ret[2];
@@ -155,7 +155,7 @@
                             path += t_paths[i]['path'][j]['start_node'] + '--' + t_paths[i]['path'][j]['val'] + '--'
                         }
                         path += tname
-                        str += "<tr><td>"+path+"</td></tr>"
+                        str += "<tr><td>"+path+"</td><td>"+i+"</td></tr>"
                     }
                     str+='</tbody></table>'
                     $("#result").html(str);
@@ -176,7 +176,14 @@
                         //"serverSide" : true,//服务器端进行分页处理的意思
                         //"bPaginate": true,
                         //"bProcessing": true
-                        columns : [{data : "id"}],
+                        columns : [{data : "id"},{data:"pid"}],
+                        "columnDefs": [
+                        {
+                            "targets": [ 1 ],
+                            "visible": false,
+                            "searchable": false
+                        }]
+
                     });
                     draw();
                     $("#mytable tbody").on("mouseover","tr",function()
